add hook to yaml

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,3 +3,8 @@
   entry: hooks/style.R
   language: script
   files: \.R$
+- id: check-secrets
+  name: Check for hardcoded passwords
+  entry: hooks/check-secrets.sh
+  language: script
+  files: \.sh$
