--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,10 +1,12 @@
-- id: style-files
-  name: Style R files using styler::tidyverse_style
-  entry: hooks/style.R
-  language: script
-  files: \.R$
-- id: check-secrets
-  name: Check for hardcoded passwords
-  entry: hooks/check-secrets.sh
-  language: script
-  files: \.sh$
+hooks:
+  - id: style-files
+    name: Style R files using styler::tidyverse_style
+    entry: hooks/style.R
+    language: script
+    files: "\\.R$"
+
+  - id: check-secrets
+    name: Check for hardcoded passwords
+    entry: hooks/check-secrets.sh
+    language: script
+    files: "\\.sh$"
